--- a/styles/about.css
+++ b/styles/about.css
@@ -1,7 +1,6 @@
 .about {
 	margin-top: 35px;
 	margin-bottom: 50px;
-	color: var(--primary-2);
 }
 
 .about__inner {
@@ -16,14 +15,9 @@
 	align-self: flex-end;
 }
 
-.about__title {
-	margin-bottom: 40px;
-	font-size: 42px;
-	font-weight: 500;
-}
-
 .about__text {
 	width: 555px;
+	margin-top: 40px;
 	font-size: 18px;
 	font-weight: normal;
 	line-height: 30px;
