--- a/styles/about.css
+++ b/styles/about.css
@@ -3,7 +3,7 @@
 	margin-bottom: 50px;
 }
 
-.about__inner {
+.about__content {
 	display: flex;
 }
 
@@ -22,4 +22,34 @@
 	font-weight: normal;
 	line-height: 30px;
 	letter-spacing: .4px;
+}
+
+@media screen and (max-width: 420px) {
+	.about {
+		margin-top: 30px;
+	}
+
+	.about__text {
+		width: 100%;
+		font-size: 14px;
+	}
+
+	.about__content {
+		flex-direction: column;
+	}
+
+	.left {
+		order: 2;
+		margin-right: 0;
+	}
+
+	.right {
+		order: 1;
+		margin-top: 24px;
+	}
+
+	.about__img {
+		width: 100%;
+		height: 220px;
+	}
 }
