added some responsive layout

--- a/styles/call-request.css
+++ b/styles/call-request.css
@@ -37,3 +37,26 @@
 	font-weight: 300;
 	margin-top: 28px;
 }
+
+.call-request__text .br-mobile {
+	display: none;
+}
+
+@media screen and (max-width: 420px) {
+	.call-request {
+		margin-top: 30px;
+		margin-bottom: 58px;
+	}
+	
+	.request-form input {
+		width: 100%;
+	}
+
+	.request-form {
+		margin-top: 26px;
+	}
+
+	.call-request__text .br-mobile {
+		display: block;
+	}
+}
