--- a/styles/about.css
+++ b/styles/about.css
@@ -24,14 +24,13 @@
 	letter-spacing: .4px;
 }
 
+.about__img--mobile {
+	display: none;
+}
+
 @media screen and (max-width: 420px) {
 	.about {
 		margin-top: 30px;
-	}
-
-	.about__text {
-		width: 100%;
-		font-size: 14px;
 	}
 
 	.about__content {
@@ -43,13 +42,23 @@
 		margin-right: 0;
 	}
 
+	.about__text {
+		width: 100%;
+		margin-top: 25px;
+		font-size: 14px;
+		line-height: 22px;
+	}
+
 	.right {
 		order: 1;
 		margin-top: 24px;
 	}
 
 	.about__img {
-		width: 100%;
-		height: 220px;
+		display: none;
+	}
+
+	.about__img--mobile {
+		display: block;
 	}
 }
