--- a/styles/our-services.css
+++ b/styles/our-services.css
@@ -15,6 +15,12 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	width: 555px;
+	height: 220px;
+	margin-bottom: 30px;
+	background-repeat: no-repeat;
+	background-size: cover;
+	border-radius: 10px;
 }
 
 .services__card p {
@@ -27,41 +33,19 @@
 }
 
 .services__card-img1 {
-	width: 555px;
-	height: 220px;
-	margin-bottom: 30px;
 	background: url(../img/our-services/our-services-img1.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-	border-radius: 10px;
 }
 
 .services__card-img2 {
-	width: 555px;
-	height: 220px;
-	margin-bottom: 30px;
 	background: url(../img/our-services/our-services-img2.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-	border-radius: 10px;
 }
 
 .services__card-img3 {
-	width: 555px;
-	height: 220px;
 	background: url(../img/our-services/our-services-img3.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-	border-radius: 10px;
 }
 
 .services__card-img4 {
-	width: 555px;
-	height: 220px;
 	background: url(../img/our-services/our-services-img4.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-	border-radius: 10px;
 }
 
 .services__text {
@@ -79,4 +63,44 @@
 	font-size: 18px;
 	font-weight: bold;
 	color: var(--white);
+}
+
+@media screen and (max-width: 420px) {
+	.services {
+		margin-top: 30px;
+		margin-bottom: 47px;
+	}
+
+	.services__cards {
+		margin-top: 47px;
+		margin-bottom: 5px;
+	}
+
+	.services__card-img1, .services__card-img2, .services__card-img3, .services__card-img4 {
+		height: 135px;
+	}
+
+	.services__card-img3 {
+		margin-bottom: 30px;
+	}
+
+	.services__card p {
+		font-size: 18px;
+	}
+
+	.services__text {
+		margin-bottom: 10px;
+		font-size: 16px;
+		line-height: 25px;
+	}
+
+	.services__button {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 187px;
+		height: 36.4px;
+		padding: 0;
+		font-size: 12px;
+	}
 }
